Calculate countdown and Update Todo list

--- a/Inveon.TODO/Views/Home/Index.cshtml
+++ b/Inveon.TODO/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
             <label for="pwd">Todo Datetime:</label>
             <div class="input-group date" id="datetimepicker1"><input type="text" class="form-control" id="datetimepicker" /><span class="input-group-addon"><span class="fa fa-calendar"></span></span></div>
         </div>
-        <button style="float:right;" type="button" class="btn btn-info add-new" id="btnAddTodo" onclick="addTodo(this)">Add Todo</button>
+        <button style="float:right;" type="button" class="btn btn-info add-new" id="btnAddTodo" onclick="AddTodo(this)">Add Todo</button>
     </form>
 </div>
 <div class="container">
@@ -42,11 +42,10 @@
                         <td id="@todoId">@item.Todo</td>
                         <td id="@todoDatetimeId">@item.TodoDatetime</td>
                         <td>
-                            <a class="add" title="Update Todo" data-toggle="tooltip" style="cursor:pointer;display:none" id="@item.ID" onclick="UpdateTodo(this)"><i class="material-icons">&#xE03B;</i></a>
-                            <a class="edit" title="Edit Todo" style="cursor:pointer;" id="@item.ID"><i class="material-icons">&#xE254;</i></a>
-                            <a class="delete" title="Delete Todo" style="cursor:pointer;" id="@item.ID"><i class="material-icons" >&#xE872;</i></a>
-                            <a href="@Url.Action("index","Home")" title="Cancel Todo" class="cancel" style="cursor:pointer;display:none;
-    margin-top: -29px;margin-left:28px" data-toggle="tooltip"><i class="material-icons cancel">&#xe5c9;</i></a>
+                            <a class="add" title="Update Todo" data-toggle="tooltip" style="cursor:pointer;display:none" id="@item.ID" onclick="UpdateTodo(this)"><i class="material-icons" style="color:green">&#xE03B;</i></a>
+                            <a class="edit" title="Edit Todo" style="cursor:pointer;" id="@item.ID"><i class="material-icons" style="color:orange">&#xE254;</i></a>
+                            <a class="delete" title="Delete Todo" style="cursor:pointer;" id="@item.ID"><i class="material-icons" style="color:red">&#xE872;</i></a>
+                            <a href="@Url.Action("index","Home")" title="Cancel Todo" class="cancel" style="cursor:pointer;display:none;margin-top: -29px;margin-left:28px;" data-toggle="tooltip"><i class="material-icons cancel" style="color:grey">&#xe5c9;</i></a>
                         </td>
                     </tr>
                 }
@@ -56,7 +55,38 @@
         </table>
     </div>
 </div>
+
 @section scripts{
+<script>
+// Calculate countdown and Update Todo list 
+function SetAndUpdateCountdown() {
+    var todos_json = @Html.Raw(Json.Encode(Model));
+    var todos = new Array();
+    var date = new Date();
+    for (var i = 0; i < todos_json.length; i++) {
+        var now = new Date().getTime();
+        var deadline = new Date(formatDate(todos_json[i].TodoDatetime));
+        var t = deadline.getTime() - now;
+        if (t > 0) {
+            todos.push({
+                "ID": todos_json[i].ID, "Todo": todos_json[i].Todo, "TodoDatetime": deadline.getTime()})
+        }
+    }
+    if (todos.length > 0) {
+        var deadline = todos[0].TodoDatetime;
+        var x = setInterval(function () {
+            var now = new Date().getTime();
+            var t = deadline - now;
+            if (t < 0) {
+                clearInterval(x);
+                alert(todos[0].Todo);
+                SetAndUpdateCountdown();
+            }
+        }, 1000);
+    }
+
+}
+</script>
     <script src="~/Scripts/Todo.js"></script>
 }
 
