--- a/Inveon.TODO/Views/Home/Index.cshtml
+++ b/Inveon.TODO/Views/Home/Index.cshtml
@@ -87,6 +87,6 @@ function SetAndUpdateCountdown() {
 
 }
 </script>
-    <script src="~/Scripts/Todo.js"></script>
+    <script src="~/Scripts/todo.js"></script>
 }
 
